--- a/Developer/Developer.csproj
+++ b/Developer/Developer.csproj
@@ -904,7 +904,9 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Start\MapperConfig.cs" />
+    <Compile Include="App_Start\MapperConfig.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
