--- a/Developer/Developer.csproj
+++ b/Developer/Developer.csproj
@@ -933,7 +933,9 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Controllers\AdminApiController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
-    <Compile Include="Controllers\DeveloperDataController.cs" />
+    <Compile Include="Controllers\OffertsApiController.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
