--- a/Developer/Developer.csproj
+++ b/Developer/Developer.csproj
@@ -938,13 +938,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\DbInitializer.cs" />
+    <Compile Include="Models\ApplicationModels\Result.cs" />
     <Compile Include="Models\ViewModels\AdType.cs" />
     <Compile Include="Models\EntityModels\ApplicationContext.cs" />
     <Compile Include="Models\EntityModels\Ad.cs" />
     <Compile Include="Models\EntityModels\Base.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Models\EntityModels\DbConfiguration.cs" />
     <Compile Include="Models\EntityModels\Flat.cs" />
     <Compile Include="Models\EntityModels\House.cs" />
     <Compile Include="Models\EntityModels\Interfaces\ILand.cs" />
@@ -962,6 +963,7 @@
     <Compile Include="Models\ViewModels\AdminHouse.cs" />
     <Compile Include="Models\ViewModels\AdminLand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Admin\AddAdvertService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -996,7 +998,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Migrations\" />
+    <Folder Include="Content\Photos\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
