--- a/Developer/Developer.csproj
+++ b/Developer/Developer.csproj
@@ -950,6 +950,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\DbInitializer.cs" />
     <Compile Include="Models\ApplicationModels\Result.cs" />
+    <Compile Include="Models\ContactEmail.cs" />
     <Compile Include="Models\EntityModels\Photo.cs" />
     <Compile Include="Models\ViewModels\AdminWorker.cs" />
     <Compile Include="Models\ViewModels\AdType.cs" />
@@ -986,6 +987,7 @@
     <Compile Include="Services\Admin\IWorkerService.cs" />
     <Compile Include="Services\Admin\PhotoService.cs" />
     <Compile Include="Services\Admin\WorkerService.cs" />
+    <Compile Include="Services\Home\EmailService\EmailService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -1011,11 +1013,13 @@
     <Content Include="Views\Admin\Workers.cshtml" />
     <Content Include="Views\Admin\AddWorker.cshtml" />
     <Content Include="Views\Admin\EditWorker.cshtml" />
+    <None Include="Services\Home\EmailService\Templates\QuestionEmailTemplate.cshtml" />
     <None Include="Views\Admin\_AddFlat.cshtml" />
     <None Include="Views\Admin\_AddHouse.cshtml" />
     <None Include="Views\Admin\_AddLand.cshtml" />
     <Content Include="Views\Home\Show.cshtml" />
     <None Include="Views\Home\NotFound.cshtml" />
+    <None Include="Views\Home\_ContactForm.cshtml" />
     <None Include="Views\Home\_ShowFlat.cshtml" />
     <None Include="Views\Home\_ShowHouse.cshtml" />
     <None Include="Views\Home\_ShowLand.cshtml" />
