--- a/Developer/Developer.csproj
+++ b/Developer/Developer.csproj
@@ -982,6 +982,7 @@
     <Compile Include="Models\ViewModels\EditFlat.cs" />
     <Compile Include="Models\ViewModels\EditHouse.cs" />
     <Compile Include="Models\ViewModels\EditLand.cs" />
+    <Compile Include="Models\ViewModels\OfferStatus.cs" />
     <Compile Include="Models\ViewModels\ShowListPhoto.cs" />
     <Compile Include="Models\ViewModels\Response.cs">
       <SubType>Code</SubType>
@@ -1042,11 +1043,13 @@
     <None Include="Views\Admin\EditHouse.cshtml" />
     <None Include="Views\Admin\EditLand.cshtml" />
     <Content Include="Views\Admin\Photos.cshtml" />
+    <None Include="Views\Admin\Offer.cshtml" />
     <None Include="Views\Admin\Offers.cshtml" />
     <None Include="Views\Admin\_AddFlat.cshtml" />
     <None Include="Views\Admin\_AddHouse.cshtml" />
     <None Include="Views\Admin\_AddLand.cshtml" />
     <Content Include="Views\Home\Show.cshtml" />
+    <None Include="Views\Home\ConfirmOffer.cshtml" />
     <None Include="Views\Home\NotFound.cshtml" />
     <Content Include="Views\Home\CreateOffer.cshtml" />
     <None Include="Views\Home\_ContactForm.cshtml" />
