commit paging for searcher and orderby

--- a/Developer/Developer.csproj
+++ b/Developer/Developer.csproj
@@ -176,6 +176,8 @@
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\app\app.js" />
+    <Content Include="Scripts\app\dirPagination.js" />
+    <Content Include="Scripts\app\dirPagination.tpl.html" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\errors.json" />
