--- a/Developer/Web.config
+++ b/Developer/Web.config
@@ -68,4 +68,9 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+  <connectionStrings>
+    <add name="DeveloperContext"
+          providerName="System.Data.SqlClient"
+          connectionString="Server=.\SQLEXPRESS;Database=Developer.Models.EntityModels.ApplicationContext;Integrated Security=True;"/>
+  </connectionStrings>
 </configuration>
