--- a/Developer/Web.config
+++ b/Developer/Web.config
@@ -61,6 +61,10 @@
     </providers>
   </entityFramework>
   <system.webServer>
+    <staticContent>
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+    </staticContent>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
@@ -68,9 +72,4 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
-  <connectionStrings>
-    <add name="DeveloperContext"
-          providerName="System.Data.SqlClient"
-          connectionString="Server=.\SQLEXPRESS;Database=Developer.Models.EntityModels.ApplicationContext;Integrated Security=True;"/>
-  </connectionStrings>
 </configuration>
