--- a/Developer/Developer.csproj
+++ b/Developer/Developer.csproj
@@ -1065,11 +1065,14 @@
     <None Include="Views\Admin\_AddHouse.cshtml" />
     <None Include="Views\Admin\_AddLand.cshtml" />
     <Content Include="Views\Home\Show.cshtml" />
+    <None Include="Views\Home\About.cshtml" />
     <None Include="Views\Home\ConfirmMail.cshtml" />
     <None Include="Views\Home\ConfirmOffer.cshtml" />
     <None Include="Views\Home\Contact.cshtml" />
+    <None Include="Views\Home\Credits.cshtml" />
     <None Include="Views\Home\NotFound.cshtml" />
     <Content Include="Views\Home\CreateOffer.cshtml" />
+    <None Include="Views\Home\Where.cshtml" />
     <None Include="Views\Home\_ContactForm.cshtml" />
     <None Include="Views\Home\_ShowFlat.cshtml" />
     <None Include="Views\Home\_ShowHouse.cshtml" />
