--- a/Developer/Developer.csproj
+++ b/Developer/Developer.csproj
@@ -960,6 +960,8 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\DbInitializer.cs" />
+    <Compile Include="Models\ApplicationModels\EmailMessage.cs" />
+    <Compile Include="Models\ApplicationModels\ParsedSearch.cs" />
     <Compile Include="Models\ApplicationModels\Result.cs" />
     <Compile Include="Models\ContactEmail.cs" />
     <Compile Include="Models\EntityModels\Mail.cs" />
@@ -1017,8 +1019,18 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Services\Admin\WorkerService.cs" />
+    <Compile Include="Services\Home\EmailService\EmailSenderService.cs" />
     <Compile Include="Services\Home\EmailService\EmailService.cs" />
+    <Compile Include="Services\Home\EmailService\EmailStorageService.cs" />
+    <Compile Include="Services\Home\EmailService\IEmailSenderService.cs" />
     <Compile Include="Services\Home\EmailService\IEmailService.cs" />
+    <Compile Include="Services\Home\EmailService\IEmailStorageService.cs" />
+    <Compile Include="Services\Home\EmailService\IShowAdvertService.cs" />
+    <Compile Include="Services\Home\EmailService\ISmtpManager.cs" />
+    <Compile Include="Services\Home\EmailService\ShowAdvertService.cs" />
+    <Compile Include="Services\Home\EmailService\SmtpManager.cs" />
+    <Compile Include="Services\Home\ISearchService.cs" />
+    <Compile Include="Services\Home\SearchService.cs" />
     <Compile Include="Services\SeedService.cs" />
   </ItemGroup>
   <ItemGroup>
