--- a/Developer/Web.config
+++ b/Developer/Web.config
@@ -13,6 +13,7 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="emailDomain" value="laptops@nawigacja.com" />
   </appSettings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -22,6 +23,14 @@
         <httpRuntime targetFramework="4.5" />
       </system.Web>
   -->
+  
+  <system.net>
+    <mailSettings>
+      <smtp from="laptops@nawigacja.com">
+        <network host="nawigacja.com" defaultCredentials="false" password="Yz042K6U" port="587" userName="laptops@nawigacja.com" enableSsl="false" />
+      </smtp>
+    </mailSettings>
+  </system.net>
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime maxRequestLength="10240"/>
