--- a/Developer/Developer.csproj
+++ b/Developer/Developer.csproj
@@ -58,6 +58,9 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.2-beta1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Practices.ServiceLocation">
       <HintPath>..\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
@@ -928,11 +931,14 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Unity.Mvc4.README.txt" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\MapperConfig.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -994,6 +1000,9 @@
     <Compile Include="Models\ViewModels\EditFlat.cs" />
     <Compile Include="Models\ViewModels\EditHouse.cs" />
     <Compile Include="Models\ViewModels\EditLand.cs" />
+    <Compile Include="Models\ViewModels\LoginViewModel.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Models\ViewModels\OfferStatus.cs" />
     <Compile Include="Models\ViewModels\ShowListPhoto.cs" />
     <Compile Include="Models\ViewModels\Response.cs">
@@ -1010,10 +1019,17 @@
     <Compile Include="Models\ViewModels\WorkersViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Admin\AddAdvertService.cs" />
+    <Compile Include="Services\Admin\AdminLoginService.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Services\Admin\IAddAdvertService.cs" />
+    <Compile Include="Services\Admin\IAdminLoginService.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Services\Admin\IPhotoService.cs" />
     <Compile Include="Services\Admin\IUpdateAdvertService.cs" />
     <Compile Include="Services\Admin\IWorkerService.cs" />
+    <Compile Include="Services\Admin\LogService\ExceptionLoggingFilter.cs" />
     <Compile Include="Services\Admin\PhotoService.cs" />
     <Compile Include="Services\Admin\UpdateAdvertService.cs">
       <SubType>Code</SubType>
@@ -1067,6 +1083,7 @@
     <None Include="Views\Admin\EditHouse.cshtml" />
     <None Include="Views\Admin\EditLand.cshtml" />
     <Content Include="Views\Admin\Photos.cshtml" />
+    <Content Include="Views\Admin\Login.cshtml" />
     <None Include="Views\Admin\Message.cshtml" />
     <Content Include="Views\Admin\Messages.cshtml">
       <SubType>Code</SubType>
@@ -1099,6 +1116,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\Photos\Workers\" />
+    <Folder Include="Log\" />
     <Folder Include="Views\ShowListFlat\" />
     <Folder Include="Views\ShowListHouse\" />
     <Folder Include="Views\ShowListLand\" />
